# loc-lm-bench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  README.md  pyproject.toml
.cursor/rules/: project-rules.mdc
.github/workflows/: ci.yml
calibration/: README.md  ua_squad_postedited_v1.csv
docs/: README.md  implementation-plan.md
docs/design/: README.md  architecture.md  decisions.md  evaluation.md  external-draft-contract.md  graph-ontology-schema.md  overview.md  prior-art.md  spec.md  text-analysis-schema.md
docs/guides/: README.md  calibration-tooling.md  composite-headline.md  crewai-harness.md  data-prep.md  dev-setup.md  external-ai-service-artifacts.md  goldset-from-scratch.md  graph-vs-faiss-comparison.md  human-in-the-loop-evaluation.md  judge-experiments.md  learning-path-evaluation-categories.md  learning-path-security.md  learning-path.md  mlflow-analysis.md  platform-matrix.md  prompt-system-rag.md  quickstart-any-corpus.md  quickstart-goldset-commands.md  quickstart-pdf-corpus-commands.md  quickstart-pdf-corpus.md  run-rag-core.md  run-skeleton.md  verification-tooling.md  vllm-backend.md
docs/guides/benchmarking/: auto-rag.md  composite-headline.md  crewai-harness.md  graph-vs-faiss-comparison.md  knowledge-cutoff.md  mlflow-analysis.md  platform-matrix.md  prompt-system-rag.md  run-rag-core.md  self-improvement-loop.md  vllm-backend.md
docs/guides/data-prep/: data-prep.md  external-ai-service-artifacts.md  goldset-from-scratch.md  pdf-corpus-prep.md
docs/guides/development/: dev-setup.md
docs/guides/external-service-prompts/: 00-project-instructions.md  01-ontology-inventory.md  02-goldset-draft.md  03-chain-questions.md  04-security-cases.md  README.md
docs/guides/human-tooling/: calibration-tooling.md  human-in-the-loop-evaluation.md  judge-experiments.md  verification-tooling.md
docs/guides/learning-path/: learning-path-evaluation-categories.md  learning-path-security.md  learning-path.md
docs/guides/quickstart/: quick-start.md  quickstart-any-corpus.md  quickstart-goldset-commands.md  quickstart-pdf-corpus-commands.md  quickstart-pdf-corpus.md
docs/impl/: current.md  plan.md
docs/impl/current/: auto-rag.md  backend-telemetry.md  category-benchmark-suite.md  data-prep.md  extended-workflows.md  graphrag-backend.md  host-validation.md  knowledge-cutoff.md  milestone-0-data-prep.md  milestone-1-eval-skeleton.md  milestone-2-backend-telemetry.md  milestone-3-rigor-board-judge.md  milestone-4-robustness-ontology-backends.md  milestone-5-composite-benchmarks.md  milestone-6-graphrag.md  milestone-7-extended-workflows.md  milestone-7-platform-matrix.md  overview.md  platform-vector-matrix.md  prompt-templates.md  rag-core.md  rag-eval-skeleton.md  real-host-verification.md  review-workbench.md  rigor-board-judge.md  robustness-ontology-backends.md  scope-boundaries.md
docs/implementation/: current.md  plan.md
docs/inference/: config-example.md
make/: config.mk  data-prep.mk  dev.mk  eval.mk  help.awk  models.mk  quickstart.mk
make/data-prep/: corpus.mk  curation.mk  draft-comparison.mk  drafting.mk  verification.mk
make/eval/: categories-platform.mk  finetune.mk  knowledge-cutoff.mk  prompt-system.mk  rag.mk  security-agentic.mk  workflows.mk
samples/: README.md  models_uk.yaml  rag_items_uk.json  run_config_uk.yaml  run_config_vllm_uk.yaml  security_cases_uk.json  structured_cases_uk.json  summarization_cases_uk.json  tooling_cases_uk.json
samples/benchmarks/: agentic_tasks_uk.json  security_cases_derived_uk.json  structured_cases_uk.json
samples/chunking/: goods_table_uk.md
samples/config-example/: README.md  manifest.yaml
samples/config-example/templates/: ollama_serve.sh.tmpl  run_eval.sh.tmpl  run_eval.yaml.tmpl  vllm_serve.sh.tmpl
samples/configs/: models_uk.yaml  run_config_uk.yaml  run_config_vllm_uk.yaml
samples/corpora/conflicts_uk_v1/: README.md
samples/corpora/duplicate_chunks_uk_v1/: README.md
samples/corpora/intra_document_repeats_uk_v1/: README.md
samples/corpora/near_duplicate_chunks_uk_v1/: README.md
samples/corpus/: ip_regulation_uk.md  water_cycle_uk.txt
samples/data-prep/: squad_uk_fixture.json
samples/external-drafts/claude-projects-open/: README.md  external_provenance.json  grounded_draft.jsonl
samples/finetune/base-score-run/: scores.jsonl
samples/finetune/registry/: README.md  (+1 more)
samples/goldsets/: README.md
samples/pdf_pages/: pdf-37e9918f8c51.citations.json  pdf-37e9918f8c51.md  plain_note.md
samples/query-prep/: prompt_dictionary_candidates.jsonl  query_glossary.json
samples/text_analysis_bundle_uk/: README.md  provenance.json  text_analysis_labels.jsonl
scripts/: build_llamacpp.sh  build_vllm.sh  code_quality.sh  detect_gpu_vram.sh  gen_rag_items.sh  gen_serving_config.sh  install_apt_deps.sh  ls_large_files.sh  quickstart.sh
scripts/apt/: dev.packages  production.packages
scripts/quickstart/: dispatch.sh  helpers.sh  model_select.sh  pdf_draft.sh  serving.sh  track_a.sh  track_b.sh  track_c.sh
scripts/shared/: common.sh
src/llb/: __init__.py  config.py  contracts.py  env.py  fsutil.py  main.py  paths.py  runtime.py
tests/: test_adapter_registry.py  test_agentic.py  test_agentic_tasks.py  test_aggregate.py  test_backend_client.py  test_bench_text_analysis.py  test_board.py  test_build_helper.py  test_calibration.py  test_chat_corpus.py  test_chunking.py  test_chunking_strategies.py  test_cli_models.py  test_compare_retrieval.py  test_config.py  test_contention.py  test_corpus_ingest.py  test_correctness.py  test_cross_check.py  test_curate_drafts.py  test_distill.py  test_draft_feedback.py  test_durable_eval.py  test_embedding.py  test_embedding_bakeoff.py  test_env.py  test_eval_graph.py  test_eval_map_reduce.py  test_eval_multi_hop.py  test_external_draft.py  test_external_rag_score.py  test_filters.py  test_finetune.py  test_finetune_compat.py  test_finetune_hparams.py  test_frontier.py  test_gen_rag_items.py  test_goldset_schema.py  test_goldset_skeleton.py  test_goldset_splits.py  (+54 more)
tests/samples/: test_sample_composite_fixtures.py
(+1536 files in other folders)
