[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llb"
version = "0.1.0"
description = "loc-lm-bench: local Ukrainian LLM model-selection benchmark"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "huggingface-hub>=0.24",
  "openai>=1.40",
]

[project.optional-dependencies]
# Installed on demand, e.g. `uv pip install -e ".[rag,track]"`. Kept out of the base
# install so `make venv` stays fast.
rag = [
  "faiss-cpu>=1.8",
  "sentence-transformers>=3.0",
  "langchain-text-splitters>=0.2",
  "deepeval>=4.0.6,<5",
]
eval = ["langgraph>=0.2"]
crewai = ["crewai>=1.15,<2"]  # agentic harness comparison alt agentic harness (LangGraph vs CrewAI); validated on 1.15.0
# platform matrix alternative vector stores behind the RAG-store seam (FAISS stays the default in [rag]).
# Pinned because these clients have version-sensitive query/score APIs.
rag-chroma = ["chromadb==1.5.9"]
rag-qdrant = ["qdrant-client==1.18.0"]
rag-lancedb = ["lancedb==0.33.0"]
graph = ["duckdb>=1.0"]  # GraphRAG backend: persisted graph + recursive-CTE k-hop engine
track = ["mlflow>=2.15", "duckdb>=1.0", "pyarrow>=16.0", "optuna>=3.6"]
board = ["streamlit>=1.36"]
prep = ["litellm>=1.40"]
telemetry = ["nvidia-ml-py>=12.0", "psutil>=5.9"]
goldset = ["datasets>=2.19"]  # only needed for `ingest_squad --hf-dataset`
mcp = ["mcp>=1.2", "anyio>=4.0"]  # only needed for `serve-tools-mcp` (tooling benchmark MCP transport)
# NOTE: vLLM / torch / flash-attn are hardware-matched (host CUDA/GPU) and installed via a
# separate build path per AGENTS.md, never as plain deps here.
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.6", "radon>=6.0", "complexipy>=5.0", "pymarkdownlnt>=0.9.32"]

[project.scripts]
llb = "llb.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pymarkdown]
# Enable GFM tables so the line-length rule (MD013) recognizes table rows as table tokens; without
# this extension pymarkdown parses a table as plain text and length-checks every (often wide) row.
extensions.markdown-tables.enabled = true
plugins.MD013.line_length = 100
plugins.MD013.code_block_line_length = 100  # the real key (was the ignored `code_line_length`)
plugins.MD013.heading_line_length = 100  # keep headings on the same 100-col budget as body text
plugins.MD013.tables = false  # do not length-check table rows (data tables are legitimately wide)
# House-style rules this repo deliberately diverges from -- disabled so `make lint-md` surfaces
# substantive issues, not style noise (re-enable any to tighten):
plugins.MD022.enabled = false  # blanks around headings (docs use a compact heading style)
plugins.MD032.enabled = false  # blanks around lists (docs use compact lists under an intro line)
plugins.MD024.enabled = false  # duplicate heading text (section names repeat across current-state topics)
plugins.MD040.enabled = false  # fenced-code language tag (plain command / shell fences)
plugins.MD004.enabled = false  # unordered-list marker style ("+" is used as a wrapped "plus" connector)
plugins.MD007.enabled = false  # nested-list indentation (compact nested lists)
plugins.MD026.enabled = false  # trailing punctuation in headings (sentence-style schema titles)

[tool.mypy]
python_version = "3.11"
files = ["src/llb"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# DeepEval ships optional pytest integration and rerun plugins as runtime dependencies. The
# benchmark invokes metrics explicitly, so disable those global plugins in this test suite.
addopts = "-q -p no:deepeval -p no:rerunfailures"
# Two test groups (see Makefile `test` vs `ci`):
#   default / `make test`  -- the FULL suite, run locally; includes `slow` tests.
#   `make ci`              -- the lightweight suite (`-m "not slow"`); GitHub CI stays fast.
# Mark a test `@pytest.mark.slow` when it is intrinsically expensive (real Optuna sweeps,
# embedder/model loads, deepeval, subprocess builds) -- not merely a first-import artifact.
markers = [
  "slow: long-running test, excluded from the lightweight `make ci` suite (run via `make test`)",
]
filterwarnings = [
  # Emitted at interpreter shutdown by SciPy's bundled SWIG extension on Python 3.11.
  "ignore:builtin type (SwigPyPacked|SwigPyObject|swigvarlink) has no __module__ attribute:DeprecationWarning",
]
