[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llb"
version = "0.1.0"
description = "loc-lm-bench: local Ukrainian LLM model-selection benchmark"
requires-python = ">=3.12"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "huggingface-hub>=0.24",
  "openai>=1.40",
  "pymupdf4llm",
  # Ukrainian lemmatization and word-form validation are runtime retrieval behavior. Keep the
  # analyzer and dictionary in the base environment so comparison rows and tests never disappear.
  "pymorphy3>=2.0",
  "pymorphy3-dicts-uk>=2.4",
  # Recursive/markdown chunk boundaries are part of the index contract, so the splitter is a
  # pinned base dependency (never optional): the boundaries must be identical in CI and on the
  # CUDA host. Bump in lockstep with `_REQUIRED_TEXT_SPLITTERS` in llb/rag/chunking.py.
  "langchain-text-splitters==1.1.2",
]

[project.optional-dependencies]
# Installed on demand, e.g. `uv pip install -e ".[rag,track]"`. Kept out of the base
# install so `make venv` stays fast.
rag = [
  "faiss-cpu>=1.8",
  "scipy>=1.11",
  "sentence-transformers>=3.0",
  "deepeval>=4.0.6,<5",
]
eval = ["langgraph>=0.2"]
crewai = ["crewai>=1.15,<2"]  # agentic harness comparison alt agentic harness (LangGraph vs CrewAI); validated on 1.15.0
# platform matrix alternative vector stores behind the RAG-store seam (FAISS stays the default in [rag]).
# Pinned because these clients have version-sensitive query/score APIs.
rag-chroma = ["chromadb==1.5.9"]
rag-qdrant = ["qdrant-client==1.18.0"]
rag-lancedb = ["lancedb==0.33.0"]
graph = ["duckdb>=1.0"]  # GraphRAG backend: persisted graph + recursive-CTE k-hop engine
track = ["mlflow>=2.15", "duckdb>=1.0", "optuna>=3.6"]  # pyarrow arrives transitively via mlflow
board = ["streamlit>=1.36"]
viz = ["matplotlib>=3.8"]  # `recommend` model-comparison chart
prep = ["litellm>=1.40"]
telemetry = ["nvidia-ml-py>=12.0", "psutil>=5.9"]
review = ["textual>=0.60"]  # unified terminal workbench for all human review ledgers
# gguf backs the serve-adapter merge lane (convert_hf_to_gguf.py runs in this venv); prefer the
# llama.cpp checkout's own gguf-py (`make build-llamacpp` env) when versions ever disagree.
# bitsandbytes backs the trainer's default QLoRA 4-bit load path on CUDA hosts.
# unsloth (the optional `--trainer unsloth` fast path) is intentionally NOT listed here: like
# marker, it pins a hardware-matched torch/triton stack. Install `unsloth` manually in the CUDA
# training environment when selecting that trainer.
finetune = [
    "peft>=0.12",
    "trl>=0.9",
    "accelerate>=0.33",
    "datasets>=2.19",
    "optuna>=3.6",
    "gguf>=0.10",
    "bitsandbytes>=0.46.1",
]
goldset = ["datasets>=2.19"]  # only needed for `ingest_squad --hf-dataset`
cutoff = ["datasets>=2.19", "optuna>=3.6"]  # HF event loading + monotone cutoff fit
mcp = ["mcp>=1.2", "anyio>=4.0"]  # only needed for `serve-tools-mcp` (tooling benchmark MCP transport)
# Optional high-quality PDF OCR/layout stack for CUDA transform hosts. Marker is intentionally
# not listed here because it pulls a hardware-matched torch stack; install `marker-pdf` in the
# dedicated CUDA transform environment when benchmarking it.
pdf-quality = ["docling[rapidocr]>=2.0", "markitdown[pdf]>=0.1", "unstructured[pdf]>=0.18"]
# NOTE: vLLM / torch / flash-attn are hardware-matched (host CUDA/GPU). `make venv`
# invokes scripts/build_vllm.sh on CUDA hosts, but they stay out of plain extras here.
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "textual>=0.60",
  # Upper bound: the formatter's output is version-sensitive, so a floating major would let a
  # release reformat the tree under CI. Lint rules are pinned by `[tool.ruff.lint].select`.
  "ruff>=0.6,<0.17",
  "radon>=6.0",
  "complexipy>=5.0",
  "pymarkdownlnt>=0.9.32",
  "optuna>=3.6",
]

[tool.uv]
conflicts = [
  [
    { extra = "crewai" },
    { extra = "rag-chroma" },
  ],
  [
    { extra = "crewai" },
    { extra = "rag-lancedb" },
  ],
  [
    { extra = "crewai" },
    { extra = "dev" },
  ],
  [
    { extra = "crewai" },
    { extra = "rag" },
  ],
]

[project.scripts]
llb = "llb.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"llb.prompts" = ["templates/**/*.txt", "templates/**/*.prompt.json", "templates/registry.json"]

[tool.ruff]
line-length = 100
target-version = "py313"
# NOTE: no `cache-dir` here on purpose. A static path cannot read .env, so it would keep writing
# into the project root after an operator moved DATA_DIR. `make/config.mk` and
# `scripts/shared/common.sh` export RUFF_CACHE_DIR=$DATA_DIR/cache/ruff instead; a bare `ruff` with
# neither loaded uses its own gitignored `.ruff_cache/`.

# The lint contract is EXPLICIT, not ruff's default set. Ruff 0.16 widened that default (import
# sorting, pyupgrade, flake8-bugbear, implicit-concat, ...), which turned a clean tree into 1391
# findings on a CI box that resolved a newer ruff than the dev box -- a linter upgrade must not be
# able to fail CI on unchanged code. These four groups are the set this repo has always enforced
# (pycodestyle errors, pyflakes); widening it is a deliberate, separate decision.
[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.pymarkdown]
# Enable GFM tables so the line-length rule (MD013) recognizes table rows as table tokens; without
# this extension pymarkdown parses a table as plain text and length-checks every (often wide) row.
extensions.markdown-tables.enabled = true
plugins.MD013.line_length = 100
plugins.MD013.code_block_line_length = 100  # the real key (was the ignored `code_line_length`)
plugins.MD013.heading_line_length = 100  # keep headings on the same 100-col budget as body text
plugins.MD013.tables = false  # do not length-check table rows (data tables are legitimately wide)
# House-style rules this repo deliberately diverges from -- disabled so `make lint-md` surfaces
# substantive issues, not style noise (re-enable any to tighten):
plugins.MD022.enabled = false  # blanks around headings (docs use a compact heading style)
plugins.MD032.enabled = false  # blanks around lists (docs use compact lists under an intro line)
plugins.MD024.enabled = false  # duplicate heading text (section names repeat across current-state topics)
plugins.MD040.enabled = false  # fenced-code language tag (plain command / shell fences)
plugins.MD004.enabled = false  # unordered-list marker style ("+" is used as a wrapped "plus" connector)
plugins.MD007.enabled = false  # nested-list indentation (compact nested lists)
plugins.MD026.enabled = false  # trailing punctuation in headings (sentence-style schema titles)

[tool.mypy]
python_version = "3.13"
files = ["src/llb"]
# Cache dir: MYPY_CACHE_DIR=$DATA_DIR/cache/mypy, exported by make/config.mk and
# scripts/shared/common.sh -- see the ruff note above for why it is not a static path here.
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
pretty = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Cache dir: pytest has no cache env var, so `make` passes -o cache_dir=$DATA_DIR/cache/pytest
# (PYTEST_CACHE_OPT). A static path here could not follow a redirected DATA_DIR; a bare `pytest`
# uses its own gitignored `.pytest_cache/`.
# Pytest's default `norecursedirs` skips directories named `build`; keep this explicit list so
# `tests/llb/build/` can mirror `src/llb/build/` and still be collected.
norecursedirs = [".*", "__pycache__", ".eggs", "dist", "CVS", "_darcs", "{arch}", "*.egg", "venv"]
# DeepEval ships optional pytest integration and rerun plugins as runtime dependencies. The
# benchmark invokes metrics explicitly, so disable those global plugins in this test suite.
addopts = "-q -p no:deepeval -p no:rerunfailures"
# `sentencepiece` (pulled in transitively by transformers/sentence-transformers) ships a
# SWIG-generated C-extension whose helper types lack `__module__`, so CPython 3.13 emits
# "builtin type <Swig...> has no __module__ attribute" DeprecationWarnings at import and at
# interpreter shutdown. It is upstream SWIG code we cannot patch; ignore only that exact message
# so the suite stays warning-clean without masking our own deprecations.
filterwarnings = [
  "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
]
# Test groups (see Makefile `test` / `ci` / `ci-github`):
#   default / `make test`  -- the FULL suite, run locally; includes `slow` tests.
#   `make ci`              -- lightweight default-local suite; excludes `slow` and `opt_in_env`.
#   `make ci-github`       -- also excludes `heavy_env`; runs in
#                            the base `[dev]`-only install with no optional-dependency skips.
# Mark a test `@pytest.mark.slow` when it is intrinsically expensive (real Optuna sweeps,
# embedder/model loads, deepeval, subprocess builds) -- not merely a first-import artifact.
# Mark a test `@pytest.mark.heavy_env` when it is quick but needs an optional extra the base
# `[dev]` install lacks (faiss via `[rag]`, duckdb via `[graph]`, vector-store adapters).
# Mark a test `@pytest.mark.opt_in_env` when it needs an extra deliberately omitted even from the
# default local environment; regular CI deselects it instead of reporting a dependency skip.
markers = [
  "slow: long-running test, excluded from the lightweight `make ci` suite (run via `make test`)",
  "heavy_env: needs optional extras beyond the base [dev] install; deselected by `make ci-github` (GitHub CI), runs in local `make ci` / `make test`",
  "opt_in_env: needs an explicitly installed dependency omitted from regular local and GitHub CI; deselected by both CI suites",
]
